--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
   <name>MemoryShape</name>
   <!-- FIXME change it to the project's website -->
-  <url>http://www.example.com</url>
+  <url>https://github.com/ideefiix/MemoryShape</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -24,6 +24,12 @@
       <artifactId>junit</artifactId>
       <version>4.11</version>
       <scope>test</scope>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.11.2</version>
     </dependency>
     <dependency>
       <groupId>org.openjfx</groupId>
@@ -39,21 +45,6 @@
 
 
   <build>
-    <!--<resources>
-      <resource>
-        <filtering>false</filtering>
-        <directory>src/main/java</directory>
-        <includes>
-          <include>**/*.fxml</include>
-          <include>**/*.css</include>
-          <include>**/*.ttf</include>
-          <include>**/*.PNG</include>
-          <include>**/*.png</include>
-          <include>**/*.jpg</include>
-        </includes>
-      </resource>
-    </resources>-->
-
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
         <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
